Refactor workshop registration section for improved layout and accessibility

--- a/index.html
+++ b/index.html
@@ -851,17 +851,27 @@
                             Weź udział w 2‑godzinnych warsztatach online z ekspertem Microsoft MVP i zdobądź praktyczną wiedzę, którą od razu wykorzystasz w pracy. Zapisz się na listę mailingową, aby otrzymywać informacje o nadchodzących wydarzeniach oraz
                             ekskluzywne materiały edukacyjne.
                         </p>
-                        <div class="relative inline-block">
-                            <div class="absolute -inset-1 bg-gradient-to-r from-jc-blue-600 to-purple-600 rounded-lg blur opacity-75 group-hover:opacity-100 transition duration-1000 group-hover:duration-200"></div>
-                            <a href="https://sendfox.com/justcloud" 
-                               target="_blank" 
-                               rel="noopener noreferrer"
-                               class="relative inline-flex items-center justify-center px-8 py-4 bg-gradient-to-r from-jc-blue-600 to-jc-blue-700 hover:from-jc-blue-700 hover:to-jc-blue-800 text-white font-bold rounded-lg shadow-xl hover:shadow-2xl transform hover:scale-105 transition-all duration-300 group text-lg">
-                                <svg class="w-6 h-6 mr-3 group-hover:scale-110 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                        <div class="flex flex-col sm:flex-row items-center justify-center gap-6">
+                            <div class="relative inline-block group">
+                                <div class="absolute -inset-1 bg-gradient-to-r from-jc-blue-600 to-purple-600 rounded-lg blur opacity-75 group-hover:opacity-100 transition duration-1000 group-hover:duration-200"></div>
+                                <a href="https://sendfox.com/justcloud" 
+                                   target="_blank" 
+                                   rel="noopener noreferrer"
+                                   class="relative inline-flex items-center justify-center px-8 py-4 bg-gradient-to-r from-jc-blue-600 to-jc-blue-700 hover:from-jc-blue-700 hover:to-jc-blue-800 text-white font-bold rounded-lg shadow-xl hover:shadow-2xl transform hover:scale-105 transition-all duration-300 group text-lg">
+                                    <svg class="w-6 h-6 mr-3 group-hover:scale-110 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                                    </svg>
+                                    ✨ Zapisz się na warsztaty
+                                    <div class="absolute inset-0 bg-white opacity-20 transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left duration-300 rounded-lg"></div>
+                                </a>
+                            </div>
+
+                            <a href="warsztaty-darmowe.html" 
+                               class="inline-flex items-center justify-center px-8 py-4 bg-white dark:bg-gray-800 text-gray-900 dark:text-white border-2 border-gray-200 dark:border-gray-700 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 font-bold rounded-lg shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition-all duration-300 text-lg group">
+                                <svg class="w-6 h-6 mr-3 text-jc-blue-600 dark:text-jc-blue-400 group-hover:scale-110 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                                 </svg>
-                                ✨ Zapisz się na warsztaty
-                                <div class="absolute inset-0 bg-white opacity-20 transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left duration-300 rounded-lg"></div>
+                                Nadchodzące warsztaty
                             </a>
                         </div>
                         
