--- a/warsztaty-darmowe.html
+++ b/warsztaty-darmowe.html
@@ -666,11 +666,11 @@
             </p>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-6 mb-12">
-                <a href="https://crossweb.pl" target="_blank" rel="noopener noreferrer" aria-label="Odwiedź profil JustCloud na CrossWeb.pl" class="group flex flex-col items-center text-center p-6 rounded-2xl bg-gray-50 dark:bg-gray-800/50 border border-gray-200 dark:border-gray-700 hover:border-emerald-400 dark:hover:border-emerald-500 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+                <a href="https://crossweb.pl" target="_blank" rel="noopener noreferrer" aria-label="Odwiedź profil JustCloud na Crossweb.pl" class="group flex flex-col items-center text-center p-6 rounded-2xl bg-gray-50 dark:bg-gray-800/50 border border-gray-200 dark:border-gray-700 hover:border-emerald-400 dark:hover:border-emerald-500 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                     <div class="w-14 h-14 rounded-xl bg-emerald-100 dark:bg-emerald-900/30 flex items-center justify-center mb-4 text-emerald-600 dark:text-emerald-400 group-hover:scale-110 transition-transform">
                         <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3M4 11h16M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
                     </div>
-                    <h3 class="text-base font-bold text-gray-900 dark:text-white mb-1">CrossWeb.pl</h3>
+                    <h3 class="text-base font-bold text-gray-900 dark:text-white mb-1">Crossweb.pl</h3>
                     <p class="text-xs text-gray-500 dark:text-gray-400 font-medium uppercase tracking-wide">Warsztaty</p>
                 </a>
 
