--- a/warsztaty-darmowe.html
+++ b/warsztaty-darmowe.html
@@ -369,7 +369,7 @@
                                             <span
                                                 class="relative inline-flex rounded-full h-2.5 w-2.5 bg-emerald-500"></span>
                                         </span>
-                                        Wstęp Wolny
+                                        Wstęp bezpłatny
                                     </span>
                                 </div>
                             </div>
@@ -482,7 +482,7 @@
                                                 d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z">
                                             </path>
                                         </svg>
-                                        Nagranie
+                                        Na żywo
                                     </div>
                                     <div class="flex items-center gap-1.5">
                                         <svg class="w-5 h-5 text-jc-blue-500" fill="none" stroke="currentColor"
@@ -558,6 +558,50 @@
 
                 </div>
             </section>
+
+            <!-- Discord Community Section -->
+            <section class="mb-24">
+                <div
+                    class="bg-gradient-to-r from-indigo-50 to-purple-100 dark:from-gray-800 dark:to-gray-900 border border-indigo-200 dark:border-indigo-800 rounded-3xl shadow-lg overflow-hidden">
+                    <div class="px-6 sm:px-10 py-10 sm:py-14 flex flex-col lg:flex-row items-center justify-between gap-6">
+                        <div class="flex-1">
+                            <div class="flex items-center gap-3 mb-4">
+                                <svg class="w-8 h-8 text-indigo-600 dark:text-indigo-400" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.607 1.25a18.27 18.27 0 0 0-5.487 0c-.163-.386-.395-.875-.607-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.294.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.294a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.057c.5-4.565-.838-8.628-3.549-12.193a.06.06 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.966 2.156-2.157 2.156zm7.975 0c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.956 2.156-2.157 2.156z" />
+                                </svg>
+                                <h3 class="text-2xl font-bold text-gray-900 dark:text-white scroll-mt-24">Prywatna grupa Discord dla
+                                    uczestników</h3>
+                            </div>
+                            <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
+                                Uczestnicy po rejestracji na warsztaty otrzymają dodatkowo dostęp do <strong>prywatnej grupy na
+                                    Discordzie</strong>, która umożliwia dyskusje związane z warsztatami i kontakt społeczności
+                                między sesjami.
+                            </p>
+                            <ul class="space-y-2 text-sm text-gray-700 dark:text-gray-300 mb-6">
+                                <li class="flex items-center gap-2"><span
+                                        class="w-2 h-2 rounded-full bg-indigo-600 dark:bg-indigo-400"></span><span>Dostęp do kanałów
+                                        tematycznych (Azure, DevOps, Terraform)</span></li>
+                                <li class="flex items-center gap-2"><span
+                                        class="w-2 h-2 rounded-full bg-indigo-600 dark:bg-indigo-400"></span><span>Czat na żywo i
+                                        wymiana doświadczeń z społecznością</span></li>
+                                <li class="flex items-center gap-2"><span
+                                        class="w-2 h-2 rounded-full bg-indigo-600 dark:bg-indigo-400"></span><span>Dostęp do
+                                        materiałów, skryptów i zasobów edukacyjnych</span></li>
+                            </ul>
+
+                        </div>
+                        <div class="hidden lg:flex justify-center lg:w-1/3">
+                            <svg class="w-32 h-32 text-indigo-500 dark:text-indigo-400 opacity-20" fill="currentColor"
+                                viewBox="0 0 24 24">
+                                <path
+                                    d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.607 1.25a18.27 18.27 0 0 0-5.487 0c-.163-.386-.395-.875-.607-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.294.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.294a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.057c.5-4.565-.838-8.628-3.549-12.193a.06.06 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.966 2.156-2.157 2.156zm7.975 0c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.956 2.156-2.157 2.156z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
 
             <!-- About the Instructor -->
             <div id="prowadzacy" class="mb-24 scroll-mt-24">
@@ -639,13 +683,19 @@
                                     </svg>
                                     LinkedIn
                                 </a>
-                                <a href="https://github.com/RogalaPiotr" target="_blank"
+                                <a href="https://mvp.microsoft.com/en-US/mvp/profile/55988764-f35a-e711-8114-3863bb2ed1f8" target="_blank"
                                     class="px-6 py-3 rounded-xl bg-gray-100 text-gray-900 hover:bg-gray-200 dark:bg-gray-800 dark:text-white font-bold dark:hover:bg-gray-700 transition-colors flex items-center gap-2">
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                                        <path
-                                            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                                    <svg class="w-5 h-5 text-[#0078D4]" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M0 0v11.408h11.408V0zm12.594 0v11.408H24V0zM0 12.594V24h11.408V12.594zm12.594 0V24H24V12.594z"/>
                                     </svg>
-                                    GitHub
+                                    MVP Profile
+                                </a>
+                                <a href="https://blog.justcloud.pl" target="_blank"
+                                    class="px-6 py-3 rounded-xl bg-gray-100 text-gray-900 hover:bg-gray-200 dark:bg-gray-800 dark:text-white font-bold dark:hover:bg-gray-700 transition-colors flex items-center gap-2">
+                                    <svg class="w-5 h-5 text-jc-blue-600 dark:text-jc-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z"/>
+                                    </svg>
+                                    Blog
                                 </a>
                             </div>
                         </div>
@@ -737,49 +787,6 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
                     </svg>
                 </a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Discord Community Section -->
-<section class="mb-24">
-    <div
-        class="bg-gradient-to-r from-indigo-50 to-purple-100 dark:from-gray-800 dark:to-gray-900 border border-indigo-200 dark:border-indigo-800 rounded-3xl shadow-lg overflow-hidden">
-        <div class="px-6 sm:px-10 py-10 sm:py-14 flex flex-col lg:flex-row items-center justify-between gap-6">
-            <div class="flex-1">
-                <div class="flex items-center gap-3 mb-4">
-                    <svg class="w-8 h-8 text-indigo-600 dark:text-indigo-400" fill="currentColor" viewBox="0 0 24 24">
-                        <path
-                            d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.607 1.25a18.27 18.27 0 0 0-5.487 0c-.163-.386-.395-.875-.607-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.294.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.294a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.057c.5-4.565-.838-8.628-3.549-12.193a.06.06 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.966 2.156-2.157 2.156zm7.975 0c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.956 2.156-2.157 2.156z" />
-                    </svg>
-                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white scroll-mt-24">Prywatna grupa Discord dla
-                        uczestników</h3>
-                </div>
-                <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-                    Uczestnicy po rejestracji na warsztaty otrzymają dodatkowo dostęp do <strong>prywatnej grupy na
-                        Discordzie</strong>, która umożliwia dyskusje związane z warsztatami i kontakt społeczności
-                    między sesjami.
-                </p>
-                <ul class="space-y-2 text-sm text-gray-700 dark:text-gray-300 mb-6">
-                    <li class="flex items-center gap-2"><span
-                            class="w-2 h-2 rounded-full bg-indigo-600 dark:bg-indigo-400"></span><span>Dostęp do kanałów
-                            tematycznych (Azure, DevOps, Terraform)</span></li>
-                    <li class="flex items-center gap-2"><span
-                            class="w-2 h-2 rounded-full bg-indigo-600 dark:bg-indigo-400"></span><span>Czat na żywo i
-                            wymiana doświadczeń z społecznością</span></li>
-                    <li class="flex items-center gap-2"><span
-                            class="w-2 h-2 rounded-full bg-indigo-600 dark:bg-indigo-400"></span><span>Dostęp do
-                            materiałów, skryptów i zasobów edukacyjnych</span></li>
-                </ul>
-
-            </div>
-            <div class="hidden lg:flex justify-center lg:w-1/3">
-                <svg class="w-32 h-32 text-indigo-500 dark:text-indigo-400 opacity-20" fill="currentColor"
-                    viewBox="0 0 24 24">
-                    <path
-                        d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.607 1.25a18.27 18.27 0 0 0-5.487 0c-.163-.386-.395-.875-.607-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.294.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.294a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.076.076 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.057c.5-4.565-.838-8.628-3.549-12.193a.06.06 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.966 2.156-2.157 2.156zm7.975 0c-1.183 0-2.157-.967-2.157-2.156 0-1.189.966-2.157 2.157-2.157 1.201 0 2.169.982 2.157 2.157 0 1.189-.956 2.156-2.157 2.156z" />
-                </svg>
             </div>
         </div>
     </div>
