--- a/warsztaty-darmowe.html
+++ b/warsztaty-darmowe.html
@@ -320,7 +320,7 @@
                                                 <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3M3 13h18M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                                                 </svg>
-                                                <span class="font-bold text-base">27.01.2026</span>
+                                                <span class="font-bold text-base">27.01.2026 18:00</span>
                                                 <span class="text-sm text-gray-500 dark:text-gray-400">(Wtorek)</span>
                                             </div>
                                             
