Add Azure resource automation section with description for improved content clarity

--- a/warsztaty-darmowe.html
+++ b/warsztaty-darmowe.html
@@ -470,6 +470,27 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div
+                                    class="p-5 rounded-2xl bg-gray-50 dark:bg-gray-800/50 border border-gray-100 dark:border-gray-700 hover:border-jc-blue-300 dark:hover:border-jc-blue-700 transition-colors group/item">
+                                    <div class="flex items-start gap-4">
+                                        <div
+                                            class="p-3 rounded-xl bg-white dark:bg-gray-800 shadow-sm text-jc-blue-600 dark:text-jc-blue-400 group-hover/item:scale-110 transition-transform">
+                                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                    d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                        <div>
+                                            <h4 class="font-bold text-gray-900 dark:text-white mb-1">Automatyzacja zasobów Azure
+                                            </h4>
+                                            <p class="text-sm text-gray-500 dark:text-gray-400 leading-snug">
+                                                Automatyzacja wdrożeń w Microsoft Azure z Terraform. Praktyczne zarządzanie infrastrukturą jako kod.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <div
