Update privacy policy: adjust robots meta tag, revise last update date, add Cloudflare data processing details, and clarify user rights regarding data processing.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,7 +21,7 @@
     <title>Polityka Prywatności i Plików Cookies - JustCloud.pl</title>
     <meta name="title" content="Polityka Prywatności i Plików Cookies - JustCloud.pl">
     <meta name="description" content="Polityka prywatności JustCloud.pl - informacje o przetwarzaniu danych osobowych, plikach cookies, Google Analytics i zgodności z RODO. Twoje prawa i nasze zobowiązania.">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://web.justcloud.pl/privacy-policy.html">
     
     <!-- Favicon -->
@@ -143,7 +143,7 @@
                     </h1>
                     
                     <p class="text-sm text-gray-500 dark:text-gray-400 mb-12">
-                        Ostatnia aktualizacja: 18 listopada 2025
+                        Ostatnia aktualizacja: 2 Stycznia 2026
                     </p>
 
                     <div class="prose prose-lg dark:prose-invert max-w-none">
@@ -161,6 +161,7 @@
                     <div class="bg-gray-50 dark:bg-gray-800 p-6 rounded-lg mb-4">
                         <p class="mb-2"><strong>👨‍💼 Piotr Rogala</strong></p>
                         <p>✉️ <a href="index.html#contact" class="text-jc-blue-600 dark:text-jc-blue-400 hover:underline">Formularz kontaktowy</a></p>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">🛡️ Kontakt w sprawach prywatności: privacy [at] justcloud [dot] pl</p>
                     </div>
                     <p class="text-gray-600 dark:text-gray-300">
                         Ponieważ strona jest projektem hobbystycznym, nie wyznaczono Inspektora Ochrony Danych.
@@ -174,12 +175,17 @@
                         Podczas korzystania z mojej strony przetwarzane są dane techniczne oraz dane osobowe, które dobrowolnie podajesz korzystając z dostępnych funkcjonalności:
                     </p>
                     <ul class="list-disc pl-6 mb-4 space-y-2 text-gray-600 dark:text-gray-300">
-                        <li><strong>Formularz kontaktowy (Formspree)</strong> – adres e-mail i treść wiadomości w celu obsługi zapytania;</li>
-                        <li><strong>Newsletter (SendFox)</strong> – adres e-mail w celu przesyłania informacji o warsztatach (zapis i wypisanie możliwe w każdej chwili);</li>
-                        <li><strong>Rezerwacja spotkań (TinyCal)</strong> – adres e-mail w celu wysłania zaproszenia na spotkanie online;</li>
-                        <li><strong>Google Analytics</strong> – anonimowe dane statystyczne w celu analizy ruchu (tylko za Twoją zgodą);</li>
+                        <li><strong>Formularz kontaktowy (Formspree)</strong> – adres e-mail i treść wiadomości w celu obsługi zapytania,</li>
+                        <li><strong>Newsletter (SendFox)</strong> – adres e-mail w celu przesyłania informacji o warsztatach (zapis i wypisanie możliwe w każdej chwili),</li>
+                        <li><strong>Rezerwacja spotkań (TinyCal)</strong> – adres e-mail w celu wysłania zaproszenia na spotkanie online,</li>
+                        <li><strong>Google Analytics</strong> – anonimowe dane statystyczne w celu analizy ruchu (tylko za Twoją zgodą),</li>
+                        <li><strong>Cloudflare</strong> – dane techniczne w celu zapewnienia bezpieczeństwa i optymalizacji działania strony,</li>
                         <li><strong>GitHub Pages</strong> – dane techniczne (np. adres IP) w celu hostingu i bezpieczeństwa.</li>
                     </ul>
+
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">
+                        Podanie danych w formularzu kontaktowym, newsletterze i rezerwacji spotkań jest dobrowolne, ale niezbędne do udzielenia odpowiedzi, wysyłki newslettera lub umówienia spotkania; dane techniczne przetwarzane są automatycznie w celu działania i bezpieczeństwa strony.
+                    </p>
                 </section>
 
                 <!-- Section 3 -->
@@ -194,6 +200,10 @@
                         <li>zapamiętywania ustawień użytkownika (cookies niezbędne),</li>
                         <li>zbierania anonimowych danych statystycznych (cookies analityczne – Google Analytics).</li>
                     </ul>
+
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">
+                        Cloudflare może ustawiać techniczne cookies (np. __cf_bm, cf_clearance) wyłącznie w celu bezpieczeństwa i wydajności; są traktowane jako niezbędne.
+                    </p>
 
                     <h3 class="text-xl font-semibold mb-3 text-gray-900 dark:text-white">Rodzaje cookies stosowane na stronie</h3>
                     <ul class="list-disc pl-6 mb-6 space-y-2 text-gray-600 dark:text-gray-300">
@@ -213,9 +223,10 @@
                 <section id="section-4" class="mb-12">
                     <h2 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">4. Podstawa prawna przetwarzania</h2>
                     <ul class="list-disc pl-6 space-y-2 text-gray-600 dark:text-gray-300">
-                        <li><strong>Kontakt i rezerwacja spotkań</strong> – art. 6 ust. 1 lit. f RODO (uzasadniony interes – obsługa korespondencji i organizacja spotkań).</li>
+                        <li><strong>Kontakt</strong> – art. 6 ust. 1 lit. f RODO (uzasadniony interes: umożliwienie komunikacji i obsługa zgłoszeń użytkowników).</li>
+                        <li><strong>Rezerwacja spotkań (TinyCal)</strong> – art. 6 ust. 1 lit. f RODO (uzasadniony interes: organizacja spotkań i zarządzanie harmonogramem).</li>
                         <li><strong>Newsletter (SendFox)</strong> – art. 6 ust. 1 lit. a RODO (dobrowolna zgoda użytkownika).</li>
-                        <li><strong>Cookies niezbędne / dane techniczne</strong> – art. 6 ust. 1 lit. f RODO (uzasadniony interes – bezpieczeństwo i działanie strony).</li>
+                        <li><strong>Cookies niezbędne / dane techniczne</strong> – art. 6 ust. 1 lit. f RODO (uzasadniony interes: zapewnienie bezpieczeństwa i ciągłości działania strony).</li>
                         <li><strong>Cookies analityczne (Google Analytics)</strong> – art. 6 ust. 1 lit. a RODO (zgoda użytkownika).</li>
                     </ul>
                 </section>
@@ -230,6 +241,7 @@
                         <li><strong>Formspree Inc.</strong> (USA) – obsługa formularza kontaktowego.</li>
                         <li><strong>Sumo Group Inc. / SendFox</strong> (USA) – obsługa newslettera.</li>
                         <li><strong>TinyCal</strong> (USA) – obsługa rezerwacji spotkań.</li>
+                        <li><strong>Cloudflare Inc.</strong> (USA) – bezpieczeństwo i optymalizacja strony.</li>
                         <li><strong>Google LLC</strong> (USA) – analityka ruchu.</li>
                     </ul>
                     <p class="text-gray-600 dark:text-gray-300">
@@ -244,6 +256,7 @@
                         <li><strong>Wiadomości kontaktowe (Formspree)</strong> – usuwane niezwłocznie po odczytaniu lub zakończeniu kontaktu.</li>
                         <li><strong>Dane newslettera (SendFox)</strong> – do momentu wycofania zgody (wypisania się z listy).</li>
                         <li><strong>Dane rezerwacji (TinyCal)</strong> – usuwane po odbyciu spotkania.</li>
+                        <li><strong>Dane techniczne (Cloudflare)</strong> – zgodnie z polityką usługodawcy (zazwyczaj nie dłużej niż 7 dni dla logów bezpieczeństwa).</li>
                         <li><strong>Cookies analityczne</strong> – maksymalnie 24 miesiące od momentu zapisania.</li>
                         <li><strong>Dane techniczne (GitHub Pages)</strong> – zgodnie z polityką usługodawcy.</li>
                     </ul>
@@ -258,8 +271,8 @@
                         <li>sprostowania swoich danych,</li>
                         <li>usunięcia danych („prawo do bycia zapomnianym"),</li>
                         <li>ograniczenia przetwarzania,</li>
-                        <li>cofnięcia zgody w dowolnym momencie (bez wpływu na zgodność z prawem przetwarzania przed jej cofnięciem),</li>
-                        <li>wniesienia skargi do organu nadzorczego (Prezesa Urzędu Ochrony Danych Osobowych – <a href="https://uodo.gov.pl" target="_blank" rel="noopener noreferrer" class="text-jc-blue-600 dark:text-jc-blue-400 hover:underline">https://uodo.gov.pl</a>).</li>
+                        <li>cofnięcia zgody w dowolnym momencie (bez wpływu na zgodność z prawem przetwarzania przed jej cofnięciem),</li>                        <li>wniesienia sprzeciwu wobec przetwarzania opartego na uzasadnionym interesie (art. 21 RODO),</li>
+                        <li>przenoszenia danych w ustrukturyzowanym formacie i przekazania ich innemu administratorowi (art. 20 RODO),</li>                        <li>wniesienia skargi do organu nadzorczego (Prezesa Urzędu Ochrony Danych Osobowych – <a href="https://uodo.gov.pl" target="_blank" rel="noopener noreferrer" class="text-jc-blue-600 dark:text-jc-blue-400 hover:underline">https://uodo.gov.pl</a>).</li>
                     </ul>
                     <p class="text-gray-600 dark:text-gray-300">
                         Aby skorzystać z tych praw, skontaktuj się ze mną przez <a href="index.html#contact" class="text-jc-blue-600 dark:text-jc-blue-400 hover:underline">formularz kontaktowy</a>.
@@ -277,6 +290,10 @@
                         <li>odrzucenie cookies analitycznych (tylko niezbędne cookies będą aktywne),</li>
                         <li>dostęp do szczegółowych informacji w Polityce Prywatności.</li>
                     </ul>
+
+                    <p class="text-gray-600 dark:text-gray-300">
+                        Twoje dane nie są wykorzystywane do zautomatyzowanego podejmowania decyzji ani profilowania.
+                    </p>
                 </section>
 
                 <!-- Section 9 -->
@@ -306,7 +323,7 @@
 
         <!-- Sticky Sidebar Navigation (Desktop only) -->
         <aside class="hidden lg:block w-64 flex-shrink-0">
-            <nav id="toc-nav" class="sticky top-32 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 p-6 shadow-sm">
+            <nav id="toc-nav" class="fixed top-32 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 p-6 shadow-sm w-64">
                 <h3 class="text-sm font-semibold text-gray-900 dark:text-white mb-4 uppercase tracking-wide">
                     Na tej stronie
                 </h3>
